[package]
name = "solswap"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
bincode = "1.3.3"
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
dotenv = "0.15.0"
env_logger = { version = "0.11.6", features = ["color"]} 
jito-sdk-rust = "0.1.0"
log = "0.4.25"
reqwest = {version = "0.12.12", features= ["json"]}
serde = "1.0.217"
serde_json = "1.0.138"
solana-client = "2.1.11"
solana-sdk = "2.1.11"
spl-token = "7.0.0"
tokio = { version = "1.40.0", features = ["full"] }
